--- a/isonoml_dev_linux.yml
+++ b/isonoml_dev_linux.yml
@@ -1,9 +1,10 @@
 name: isonoml_dev
 channels:
+  - pytorch
   - conda-forge
   - defaults
 dependencies:
-  - _tflow_select
+  - _tflow_select==2.3.0
   - absl-py==0.9.0
   - albumentations==0.4.5
   - astor==0.8.0
@@ -53,7 +54,7 @@ dependencies:
   - libcxx==10.0.0
   - libedit==3.1.20191231
   - libffi==3.3
-  - libgfortran==3.0.1
+  - libgfortran
   - libiconv==1.15
   - liblapack==3.8.0
   - libopenblas==0.3.6
@@ -179,5 +180,3 @@ dependencies:
     - traitlets==4.3.3
     - urllib3==1.25.9
     - webencodings==0.5.1
-prefix: /Users/Amy/opt/miniconda3/envs/tf
-
